src/custom/snapshots/hugr_llvm__custom__prelude__test__prelude_const_external_symbol@llvm14.snap
---
source: src/custom/prelude.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

@sym2 = external global { i32, { i64, { i32, {}, {}, {} } }, {} }
@sym1 = external constant i64

define { i64, { i32, { i64, { i32, {}, {}, {} } }, {} } } @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %sym2 = load { i32, { i64, { i32, {}, {}, {} } }, {} }, { i32, { i64, { i32, {}, {}, {} } }, {} }* @sym2, align 4
  %sym1 = load i64, i64* @sym1, align 4
  %mrv = insertvalue { i64, { i32, { i64, { i32, {}, {}, {} } }, {} } } undef, i64 %sym1, 0
  %mrv5 = insertvalue { i64, { i32, { i64, { i32, {}, {}, {} } }, {} } } %mrv, { i32, { i64, { i32, {}, {}, {} } }, {} } %sym2, 1
  ret { i64, { i32, { i64, { i32, {}, {}, {} } }, {} } } %mrv5
}
