src/custom/snapshots/hugr_llvm__custom__prelude__test__prelude_make_tuple@pre-mem2reg@llvm14.snap
---
source: src/custom/prelude.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { { { i32, {}, {} }, { i32, {}, {} } } } @_hl.main.1({ i32, {}, {} } %0, { i32, {}, {} } %1) {
alloca_block:
  %"0" = alloca { { { i32, {}, {} }, { i32, {}, {} } } }, align 8
  %"2_0" = alloca { i32, {}, {} }, align 8
  %"2_1" = alloca { i32, {}, {} }, align 8
  %"4_0" = alloca { { { i32, {}, {} }, { i32, {}, {} } } }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, {}, {} } %0, { i32, {}, {} }* %"2_0", align 4
  store { i32, {}, {} } %1, { i32, {}, {} }* %"2_1", align 4
  %"2_01" = load { i32, {}, {} }, { i32, {}, {} }* %"2_0", align 4
  %"2_12" = load { i32, {}, {} }, { i32, {}, {} }* %"2_1", align 4
  %2 = insertvalue { { i32, {}, {} }, { i32, {}, {} } } undef, { i32, {}, {} } %"2_01", 0
  %3 = insertvalue { { i32, {}, {} }, { i32, {}, {} } } %2, { i32, {}, {} } %"2_12", 1
  %4 = insertvalue { { { i32, {}, {} }, { i32, {}, {} } } } poison, { { i32, {}, {} }, { i32, {}, {} } } %3, 0
  store { { { i32, {}, {} }, { i32, {}, {} } } } %4, { { { i32, {}, {} }, { i32, {}, {} } } }* %"4_0", align 4
  %"4_03" = load { { { i32, {}, {} }, { i32, {}, {} } } }, { { { i32, {}, {} }, { i32, {}, {} } } }* %"4_0", align 4
  store { { { i32, {}, {} }, { i32, {}, {} } } } %"4_03", { { { i32, {}, {} }, { i32, {}, {} } } }* %"0", align 4
  %"04" = load { { { i32, {}, {} }, { i32, {}, {} } } }, { { { i32, {}, {} }, { i32, {}, {} } } }* %"0", align 4
  ret { { { i32, {}, {} }, { i32, {}, {} } } } %"04"
}
