src/custom/snapshots/hugr_llvm__custom__prelude__test__prelude_unpack_tuple@pre-mem2reg@llvm14.snap
---
source: src/custom/prelude.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { { i32, {}, {} }, { i32, {}, {} } } @_hl.main.1({ { { i32, {}, {} }, { i32, {}, {} } } } %0) {
alloca_block:
  %"0" = alloca { i32, {}, {} }, align 8
  %"1" = alloca { i32, {}, {} }, align 8
  %"2_0" = alloca { { { i32, {}, {} }, { i32, {}, {} } } }, align 8
  %"4_0" = alloca { i32, {}, {} }, align 8
  %"4_1" = alloca { i32, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { { { i32, {}, {} }, { i32, {}, {} } } } %0, { { { i32, {}, {} }, { i32, {}, {} } } }* %"2_0", align 4
  %"2_01" = load { { { i32, {}, {} }, { i32, {}, {} } } }, { { { i32, {}, {} }, { i32, {}, {} } } }* %"2_0", align 4
  %1 = extractvalue { { { i32, {}, {} }, { i32, {}, {} } } } %"2_01", 0
  %2 = extractvalue { { i32, {}, {} }, { i32, {}, {} } } %1, 0
  %3 = extractvalue { { i32, {}, {} }, { i32, {}, {} } } %1, 1
  store { i32, {}, {} } %2, { i32, {}, {} }* %"4_0", align 4
  store { i32, {}, {} } %3, { i32, {}, {} }* %"4_1", align 4
  %"4_02" = load { i32, {}, {} }, { i32, {}, {} }* %"4_0", align 4
  %"4_13" = load { i32, {}, {} }, { i32, {}, {} }* %"4_1", align 4
  store { i32, {}, {} } %"4_02", { i32, {}, {} }* %"0", align 4
  store { i32, {}, {} } %"4_13", { i32, {}, {} }* %"1", align 4
  %"04" = load { i32, {}, {} }, { i32, {}, {} }* %"0", align 4
  %"15" = load { i32, {}, {} }, { i32, {}, {} }* %"1", align 4
  %mrv = insertvalue { { i32, {}, {} }, { i32, {}, {} } } undef, { i32, {}, {} } %"04", 0
  %mrv6 = insertvalue { { i32, {}, {} }, { i32, {}, {} } } %mrv, { i32, {}, {} } %"15", 1
  ret { { i32, {}, {} }, { i32, {}, {} } } %mrv6
}
